# SplitSmart

./: .gitignore  package-lock.json  package.json  prova.md  run.sh  run_test.sh
backend/: .env  Cargo.toml  Rocket.toml  db.sqlite  db_test.sqlite  diesel.toml  rustc-ice-2025-06-02T17_37_48-140071.txt  rustc-ice-2025-06-10T14_50_00-13282.txt  rustc-ice-2025-06-10T14_50_22-13368.txt  rustc-ice-2025-06-10T14_56_22-13831.txt  rustc-ice-2025-06-10T14_58_01-14695.txt  rustc-ice-2025-06-10T15_31_38-18713.txt  rustc-ice-2025-06-10T15_39_21-20678.txt  rustc-ice-2025-06-10T15_39_43-20757.txt  rustc-ice-2025-06-10T15_40_08-20905.txt
backend/api_docs/: openapi.json
backend/migrations/2025-05-31-101252_init_all/: down.sql  up.sql
backend/migrations/2025-06-25-135141_friends/: up.sql
backend/migrations/2025-06-25-135901_friend_invites/: up.sql
backend/migrations/2025-06-26-071111_notifications/: down.sql  up.sql
backend/migrations/2025-08-18-091514_notificationprefs/: down.sql  up.sql
backend/migrations/2025-08-20-113340_on_delete_for_notifications/: down.sql  up.sql
backend/src/: main.rs  models.rs  schema.rs
backend/src/api/: expenses.rs  friends.rs  groups.rs  mod.rs  notifications.rs  users.rs
frontend/: next.config.ts  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(main)/: layout.tsx
frontend/src/component/auth/: loginForm.tsx  registerForm.tsx
frontend/src/component/balances/: addPrivateExpenseModal.tsx
frontend/src/component/friends/: addFriendTab.tsx  addFriendsExpenseModal.tsx  editPrivateExpenseModal.tsx  friendRequestsTab.tsx  friendsListTab.tsx  privateExpenseDetailModal.tsx
frontend/src/component/groups/: createGroupModal.tsx  groupCard.tsx  groupList.tsx
frontend/src/component/notifications/: NotificationItem.tsx  NotificationList.tsx  NotificationPage.tsx  expenseNotificationItem.tsx  genericExpenseNotificationItem.tsx  invitesTab.tsx  notificationItem.tsx  notificationsTab.tsx  privateExpenseNotificationItem.tsx
frontend/src/component/ui/: button.tsx  card.tsx  input.tsx  modal.tsx  portal.tsx  textarea.tsx
frontend/src/lib/: api.ts  authContext.tsx  queryProvider.tsx  utils.ts
frontend/src/types/: index.ts
(+35 files in other folders)
